<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/second"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/title2"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/methodInfo"
        android:layout_below="@+id/title2"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/oncreate"
            android:id="@+id/createId1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/onstart"
            android:layout_below="@+id/createId1"
            android:id="@+id/startId1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/onresume"
            android:layout_below="@+id/startId1"
            android:id="@+id/resumeId1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/onpause"
            android:layout_below="@+id/resumeId1"
            android:id="@+id/pauseId1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/onstop"
            android:layout_below="@+id/pauseId1"
            android:id="@+id/stopId1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:text="@string/ondestroy"
            android:layout_below="@+id/stopId1"
            android:id="@+id/destroyId1"
            android:textSize="18sp"
            android:textStyle="bold"
            />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goFirst"
        android:layout_centerInParent="true"
        android:id="@+id/buttonAct1"
        />

</RelativeLayout>